fix vertical-align in brave ad

--- a/res/include/style/viewer.css
+++ b/res/include/style/viewer.css
@@ -224,6 +224,7 @@
 .toolbar_button > img {
 	width: 24px;
 	height: 24px;
+	vertical-align: middle;
 }
 .toolbar_button > span {
 	vertical-align: middle;
